Add interactive Genspark AI Developer guide website

--- a/package.json
+++ b/package.json
@@ -1,12 +1,18 @@
 {
-  "name": "webapp",
+  "name": "genspark-ai-developer-guide",
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "dev:sandbox": "wrangler pages dev dist --ip 0.0.0.0 --port 3000",
     "build": "vite build",
     "preview": "wrangler pages dev",
     "deploy": "npm run build && wrangler pages deploy",
-    "cf-typegen": "wrangler types --env-interface CloudflareBindings"
+    "deploy:cloudflare": "npm run build && wrangler pages deploy dist --project-name genspark-ai-guide",
+    "cf-typegen": "wrangler types --env-interface CloudflareBindings",
+    "clean-port": "fuser -k 3000/tcp 2>/dev/null || true",
+    "git:init": "git init && git add . && git commit -m 'Initial commit'",
+    "git:commit": "git add . && git commit -m",
+    "git:status": "git status"
   },
   "dependencies": {
     "hono": "^4.10.2"
